--- a/css/style.css
+++ b/css/style.css
@@ -68,13 +68,14 @@ body {
 .page-header-navigation {
   display: flex;
   flex-grow: 1;
+  align-items: center;
 }
 
 .navigation-list {
   display: flex;
+  width: 464px;
   align-items: center;
   flex-wrap: wrap;
-  gap: 32px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -82,14 +83,32 @@ body {
 
 .user-navigation {
   display: flex;
+  width: 338px;
   align-items: center;
   flex-wrap: wrap;
   margin-left: auto;
+  justify-content: flex-end;
 }
 
 .navigation-link,.card-link{
+  display: block;
   color: #000000;
   text-decoration: none;
+}
+
+.navigation-item .navigation-link{
+  padding: 20px 16px;
+}
+
+.user-navigation .navigation-link{
+  min-width: 20px;
+  min-height: 36px;
+}
+
+.user-navigation-link{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .button{
@@ -101,6 +120,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
+  padding: 0 34px;
 }
 
 .big-button{
@@ -142,6 +162,7 @@ body {
 .section-description{
   font-size: 22px;
   line-height: 26px;
+  margin: 0;
 }
 
 .features-item{
