--- a/css/style.css
+++ b/css/style.css
@@ -143,11 +143,7 @@ body {
   background-size: 100% auto,cover;
   background-position: left bottom,left top;
   background-repeat: no-repeat;
-  background-color: #2c92d6;
-}
-
-.features{
-  text-align: center;
+  background-color: #a1c0d5;
 }
 
 .section-title{
@@ -165,25 +161,68 @@ body {
   margin: 0;
 }
 
-.features-item{
-  background-color: rgba(131, 179, 211, 0.12);
-}
-
 .section-subtitle{
   color: #000000;
   font-size: 24px;
   font-weight: 700;
   line-height: 28px;
   text-transform: uppercase;
+  margin: 0;
 }
 
+.features{
+  text-align: center;
+}
+
+.features-titles-wrapper{
+  padding: 69px 274px;
+}
+
+.features .section-title{
+  margin-bottom: 25px;
+}
+
+.features-list{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.features-item{
+  background-color: rgba(131, 179, 211, 0.12);
+  width: 400px;
+  box-sizing: border-box;
+  padding: 112px 85px;
+}
+
+
 .features-large{
+  display: flex;
+  width: 1200px;
+  flex-wrap: wrap;
   color: #ffffff;
   background-color: #82B3D3;
+  padding: 0;
+}
+
+.features-large-wrapper{
+  width: 400px;
+  padding: 102px 85px;
+  box-sizing: border-box;
 }
 
 .features-large .section-subtitle{
   color: #ffffff;
+}
+
+.features-title{
+  margin-bottom: 62px;
+}
+
+.features-text{
+  margin: 0;
 }
 
 .features-item:nth-child(3){
@@ -221,7 +260,7 @@ body {
 }
 
 .subscribe{
-  background-color: #2c92d6;
+  background-color: #a1c0d5;
   color: #ffffff;
   background-image: url(../images/background/subscribe.jpg);
   background-size: 100% auto;
@@ -272,7 +311,7 @@ body {
 }
 
 .inner-wrapper{
-  background-color: #2c92d6;
+  background-color: #a1c0d5;
   color: #ffffff;
   background-image: url(../images/background/main-inner.jpg);
   background-size: cover;
