--- a/css/style.css
+++ b/css/style.css
@@ -481,6 +481,8 @@ text-transform: uppercase;
   gap: 16px 20px;
   padding: 20px;
   box-sizing: border-box;
+  box-shadow: 1px 1px #e5e5e5, -1px -1px #e5e5e5;
+  border-radius: 4px;
 }
 
 .card-img {
