--- a/css/style.css
+++ b/css/style.css
@@ -404,11 +404,48 @@ line-height: 24px;
 .sort-title{
   margin-right: 200px;
 }
+
 .sort-viewer-list{
   display: flex;
-  width: 160px;
+  flex-wrap: wrap;
+  width: 216px;
   gap: 8px;
   margin-left: auto;
+  padding: 0;
+  list-style: none;
+  justify-content: end;
+  align-items: center;
+}
+
+.viewer-link{
+  display: block;
+  min-width: 16px;
+  min-height: 14px;
+  padding: 15px 14px;
+  border: 2px solid #E5E5E5;
+  border-radius: 4px;
+}
+
+.viewer-link-active{
+  border-color: #000000;
+}
+
+.viewer-icon{
+  background-image: url(../images/background/View-icon.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.viewer-compact{
+  background-image: url(../images/background/View-compact.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.viewer-list{
+   background-image: url(../images/background/View-list.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card-title{
