--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
   justify-content: flex-end;
 }
 
-.navigation-link,.card-link{
+.navigation-link,.card-link,.footer-social-link{
   display: block;
   color: #000000;
   text-decoration: none;
@@ -245,16 +245,32 @@ body {
 }
 
 .services-list{
+  width: 1200px;
   display: flex;
+  flex-wrap: wrap;
   background-color: #83B3D31F;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
 }
 
-.services-item:nth-child(2){
+.services-item:nth-child(2n){
   background-color: #ffffff;
 }
 
 .services-item{
+  box-sizing: border-box;
   width: 400px;
+  padding: 183px 85px 81px;
+}
+
+.services-item-text{
+  margin: 0;
+}
+
+.services-item-title{
+  margin-bottom: 30px;
 }
 
 .section-subtitle{
@@ -263,7 +279,10 @@ body {
 }
 
 .search{
+  width: 1200px;
   text-align: center;
+  padding: 96px 304px;
+  box-sizing: border-box;
 }
 
 .search-button{
@@ -278,10 +297,47 @@ body {
   background-position: left top;
   background-repeat: no-repeat;
   text-align: center;
+  padding-top: 96px;
+  padding-bottom: 104px;
+}
+
+.subscribe-wrapper{
+  width: 1200px;
+  padding:0 362px;
+  padding-bottom: 54px;
+  box-sizing: border-box;
 }
 
 .subscribe-title{
   color: #ffffff;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.subscribe-form{
+  display: flex;
+  margin: 0 auto;
+  width: 684px;
+  border-radius: 4px;
+}
+.subscribe-field{
+flex-grow: 1;
+}
+.subscribe-button{
+  min-width: 132px;
+  min-height: 36px;
+  padding: 8px 50px;
+  border: none;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.field-input{
+  width: 452px;
+  padding: 14px 0 14px 20px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border: none;
 }
 
 .field-input {
@@ -306,15 +362,48 @@ body {
 .footer-social-list{
   display: flex;
   align-items: center;
-  width: 140px;
+  width: 190px;
   margin: 0;
   padding: 0;
+  list-style: none;
+  flex-wrap: wrap;
 }
 
-.footer-phone {
+.footer-social-link{
+  display: block;
+  min-width: 24px;
+  min-height: 17px;
+  padding: 11.5px 11.665px ;
+}
+
+.footer-social-vk{
+  background-image: url(../images/background/vk.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-social-telegram{
+  background-image: url(../images/background/telegram.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-social-youtube{
+  background-image: url(../images/background/youtube.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.footer-phone{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 331px; ;
+}
+
+.phones-number{
   font-size: 40px;
   line-height: 40px;
-  width: 331px;
 }
 
 .footer-developer{
@@ -328,11 +417,7 @@ body {
   background-size: cover;
   background-position: left top;
   background-repeat: no-repeat;
-}
-
-.center-wrapper{
-  width: 1060px;
-  margin: 0 auto;
+  padding: 35px 70px 70px;
 }
 
 .filters-form{
@@ -388,21 +473,30 @@ line-height: 24px;
   background-color: transparent;
 }
 
+.catalog{
+  padding: 50px 70px 60px;
+}
+
 .catalog-sort{
   display: flex;
   flex-grow: 1;
   align-items: center;
-}
-
-.sort-select{
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  width: 292px;
+  margin-bottom: 40px;
 }
 
 .sort-title{
   margin-right: 200px;
+}
+
+.sort-select{
+  width: 292px;
+  padding: 14px 131px 14px 20px;
+}
+
+.select-option{
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
 }
 
 .sort-viewer-list{
@@ -410,6 +504,7 @@ line-height: 24px;
   flex-wrap: wrap;
   width: 216px;
   gap: 8px;
+  margin: 0;
   margin-left: auto;
   padding: 0;
   list-style: none;
@@ -522,6 +617,7 @@ text-transform: uppercase;
   display: grid;
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
+  margin-bottom: 80px;
 }
 
 .card-item{
