--- a/css/style.css
+++ b/css/style.css
@@ -197,7 +197,7 @@ body {
   margin-bottom: 69px;
 }
 
-.section-title,.search-title{
+.section-title,.search-title,.subscribe-title {
   color: #000000;
   font-size: 30px;
   font-weight: 700;
@@ -206,7 +206,7 @@ body {
   margin: 0;
 }
 
-.section-description,.search-text{
+.section-description,.search-text,.subscribe-text{
   font-size: 22px;
   line-height: 26px;
   margin: 0;
@@ -754,7 +754,20 @@ line-height: 24px;
 
 .sort-select{
   width: 292px;
-  padding: 14px 131px 14px 20px;
+  padding: 14px 20px;
+  padding-right: 52px;
+  background-color: inherit;
+  font-family: "PT Sans", sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 400;
+  font-style: normal;
+  appearance: none;
+  background-image: url(../images/background/select-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: right 20px center;
+  border: none;
+
 }
 
 .select-option{
@@ -856,8 +869,8 @@ text-transform: uppercase;
 
 .pages-list{
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
+  gap: 8px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -865,16 +878,32 @@ text-transform: uppercase;
 }
 
 .pages-link{
-  width: 60px;
-  height: 60px;
+  min-width: 60px;
   background-color: #82B3D3 ;
   color: #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: block;
+  padding: 12px;
+  text-align: center;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.pages-first-link{
+  background-color: #F2F2F2;
+  color: #000000;
+}
+
+.pages-penultimate-link{
+  background-color: transparent;
+  color: #000000;
+}
+
+.subscribe-text{
+  margin-bottom: 54px;
 }
 
 .catalog-card-list{
+  position: relative;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -882,6 +911,16 @@ text-transform: uppercase;
   grid-template-columns: repeat(3, 340px);
   gap: 20px;
   margin-bottom: 80px;
+}
+
+.catalog-card-list::before{
+  position: absolute;
+  content: "";
+  left: 0;
+  right: 0;
+  bottom: -40px;
+  height: 1px;
+  background-color: #E5E5E5;
 }
 
 .card-item{
